	This stuff had too many drawbacks of global variables.
	An optional check parameter was added to a lot of calls on Config::Model. The API
	was also sanitized with some positional parameters replaced by named parameters. Most of 
	these changes should be internal. The main impact is that Backend must now explicitely
	pass this check parameter lest the force_load will not work.

2010-10-01 Dominique Dumont  <domi.dumont@free.fr> 1.211
	* Value.pm: added warn_if_match and warn_unless_match parameters.
	Value will issue a warning if the stored value match (or does not) 
	match a Perl regular expression specified in the model.
	* AnyId.pm: Likewise, added warn_if_key_match and 
	warn_unless_key_match. 
	* Value.pm: added warn parameter. Unconditionaly issue a warning with
	a string specified in the model. Mostly usefull for deprecated or accept'ed 
	parameters
	* Loader.pm: load string can now undef a leaf with '~' action. 
	E.g load("foo~") will set foo parameter to undef.
	* Copyright model: warn if unknown license is used.

2010-09-30 Dominique Dumont  <domi.dumont@free.fr> 1.210
	* renamed config-edit-dep5 in config-edit-dpkg-copyright
	* renamed Debian::Dep5 model to Debian::Dpkg::Copyright
	* renamed Config::Model::Backend::Debian::Dep5 backend to 
	  Config::Model::Backend::Debian::Dpkg::Copyright
	* Factored out code to read/write control files in 
	  Config::Model::Backend::Debian::DpkgSyntax
	* Created model and backend for Debian control files
	* added config-edit-dpkg-control command line

2010-09-20 Dominique Dumont  <domi.dumont@free.fr> 1.209
	* Fixed Debian::Dep5 parser: fixed read issue and added write
	capability

2010-09-16 Dominique Dumont  <domi.dumont@free.fr> 1.208
	* Fixed missing dependencies in Build.PL (Building from hg
	requires Dist::Zilla and Dist-Zilla-Plugins-CJM >= 3.01)

2010-09-14 Dominique Dumont  <domi.dumont@free.fr> 1.207
	* Added Debian's Dep-5 model (with config-edit-dep5 CLI)