@@ -7,6 +7,8 @@
 	was also sanitized with some positional parameters replaced by named parameters. Most of 
 	these changes should be internal. The main impact is that Backend must now explicitely
 	pass this check parameter lest the force_load will not work.
+	* ValueComputer: Remove req on Parse::RecDescent version. (Debian bug #597795)
+	* Value.pm: added silent parameter to fetch method to avoid displaying warnings on STDOUT
 
 2010-10-01 Dominique Dumont  <domi.dumont@free.fr> 1.211
 	* Value.pm: added warn_if_match and warn_unless_match parameters.
